# rain-float

./: .gitignore  .gitmodules  Makefile  README.md  flake.nix
.github/workflows/: ci.yaml
abi/: abi.json  bytecode.hex
bindings/: Cargo.toml
bindings/src/: lib.rs
examples/node/: index.js  package.json
examples/web/: index.html  index.js  package.json  vite.config.js
js/: README.md  package.json
rain-float/: Cargo.toml
rain-float/src/: add.rs  eq.rs  format.rs  lib.rs  parse.rs  sol.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
