
[package]
name = "rain_float"
version = "0.1.0"
edition = "2021"

[lib]
name = "rain_float"
path = "src/lib.rs"

[dependencies]
alloy-sol-types = { version = "1.2.0", default-features = false, features = ["json"] }
revm = { version = "24.0.1", default-features = false, features = ["std", "portable"] }
anyhow = "1.0.98"
